--- a/app.css
+++ b/app.css
@@ -6,3 +6,14 @@
 .blue {
     color: blue;
 }
+
+strong {
+    font-weight: bold;
+}
+
+hr {
+    border: 1px solid gray;
+    border-top: 0.1rem solid #f4f5f6;
+    margin-bottom: 3.5rem;
+    margin-top: 3rem;
+}
